Top part designed

--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Factory</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="topSection">
+        <div class="intro">
+            <h1>Satisfying people’s <span>hunger</span> for life’s simple pleasures</h1>
+            <p class="introText">Food is everything we are. It’s an extension of nationalist feeling, ethnic feeling, your personal history, your province, your region and your tribe.</p>
+            <a class="orderLink" target="_blank" href="https://www.linkedin.com/in/md-mahamudul-alam-255700144/">Order Here</a>
+        
+        </div>
+        <div class="imgContainer">
+            <img class="proImg" src="images/main-image.jpg" alt="A beautiful Image">
+        </div>
+
+    </section>
     
 </body>
 </html>
