--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <img id="header-img" src="images/logo.jpg">
     <nav id="nav-bar">
         <a href="#nav-link"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
-        <a href="#delivery"><i class="fa fa-truck" aria-hidden="true"></i> Delivery</a>
-        <a href="#delivery"><i class="fa fa-truck" aria-hidden="true"></i> Contact</a>
+        <a href="#nav-link"><i class="fa fa-truck" aria-hidden="true"></i> Delivery</a>
+        <a href="#nav-link"><i class="fa fa-volume-control-phone" aria-hidden="true"></i> Contact Us</a>
         
     </nav>
     </div>
